<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Se define una variable de tipo Move que se utilizará para enlazar los datos -->
    <data>
        <variable
            name="move"
            type="com.example.examenfinal.models.Move" />
    </data>

    <!-- Se utiliza un ConstraintLayout como contenedor principal -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Se define un TextView para mostrar el texto "movement_pokemon" -->
        <TextView
            android:id="@+id/movimientoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="#000000"
            android:backgroundTint="@color/teal_200"
            android:text="@string/movement_pokemon"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Se define un TextView para mostrar el nombre del movimiento. El texto se enlaza a la propiedad "name" del objeto "move" -->
        <TextView
            android:id="@+id/nombreMove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="25dp"
            android:background="#000000"
            android:backgroundTint="@color/teal_200"
            android:text="@{move.name}"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/accuracyText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movimientoText" />

        <!-- Se define un TextView para mostrar el texto "accuracy_pokemon" -->
        <TextView
            android:id="@+id/accuracyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:background="#000000"
            android:backgroundTint="@color/teal_200"
            android:text="@string/accuracy_pokemon"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/accuracyList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreMove" />

        <!-- Se define un TextView para mostrar la precisión del movimiento. El texto se enlaza a la propiedad "accuracy" del objeto "move" -->

        <TextView
            android:id="@+id/accuracyList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:background="#000000"
            android:backgroundTint="@color/teal_200"
            android:text="@{move.accuracy}"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/pokemonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accuracyText" />

        <!-- Se define un TextView para mostrar el texto "pokemon_list" -->

        <TextView
            android:id="@+id/pokemonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:background="#000000"
            android:backgroundTint="@color/teal_200"
            android:text="@string/pokemon_list"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/pokemonList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accuracyList" />

        <!-- Se define un TextView para mostrar la lista de pokemons que pueden aprender el movimiento. El texto se enlaza a la propiedad "pokemonsString" del objeto "move" -->

        <TextView
            android:id="@+id/pokemonList"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="120dp"
            android:background="#000000"
            android:backgroundTint="@color/teal_200"
            android:text="@{move.pokemonsString}"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokemonText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>